[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hien_logger"]


[project]
name = "hien_logger"
version = "0.0.2.3"
authors = [{ name = "hienhayho", email = "hienhayho3002@gmail.com" }]
description = "A colorful logger for Python's applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
Homepage = "https://github.com/hienhayho/hien_logger"
Issues = "https://github.com/hienhayho/hien_logger/issues"
